wip(spring): #10 tests and try to fix ...